k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devnet-chatbot-roomadd-svc
  namespace: devnet-tools-prod
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: devnet-chatbot-roomadd
